# world-runtime

./: .gitignore  APP_SERVER_PROTOCOL.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NEW_THREAD_KICKOFF_PROMPT.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  STATUS.md  pyproject.toml  requirements-dev.txt  setup.py
.github/: CODEOWNERS  pull_request_template.md
adapters/: CHANGELOG.md  NEW_THREAD_DA_M1.md  NEW_THREAD_DA_M2.md  NEW_THREAD_DA_M3.md  NEW_THREAD_DA_M4.md  NEW_THREAD_DA_M5.md  NEW_THREAD_DA_M6.md  NEW_THREAD_DA_M7.md  NEW_THREAD_DA_M8.md  NEW_THREAD_DA_M9.md  README.md  ROADMAP.md  STATUS.md  __init__.py  base.py  public_program.py  registry.py
api/: PUBLIC_API_V1.md  __init__.py  http_server.py  runtime_api.py  runtime_factory.py
cli/: test_client.py
config/: public_export_lab_allowlist.txt
core/: __init__.py  app_protocol.py  app_server.py  connector_state_store.py  connector_transports.py  connectors.py  deployment.py  eval_harness.py  event_store.py  integration_stacks.py  local_ai_reference_stack.py  migrations.py  observability.py  operator_workflows.py  path_utils.py  persistence.py  persistence_recovery.py  policy_engine.py  projector.py  provenance.py  provider_registry.py  reasoning_adapter.py  reference_local_ai_extraction.py  replay_engine.py  routing_policy.py  routing_trace.py  runtime_admin.py  runtime_host.py  runtime_host_state.py  simulation_engine.py  sqlite_event_store.py  task_profiles.py  task_router.py
docs/: COMPATIBILITY_MATRIX.md  CONSUMER_INTEGRATION.md  EXTENSION_CONTRACTS.md  (+14 more)
(+708 files in other folders)
