[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "world-runtime"
description = "Harness-first reference runtime for executable world-model systems."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
license = {text = "Apache-2.0"}
authors = [
  {name = "INDUSTRY 5, Inc."}
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
world-runtime = "world_runtime.cli:main"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
include = ["api*", "core*", "sdk*", "world_runtime*"]

[tool.setuptools.package-data]
"world_runtime.resources" = ["bootstrap_examples/**/*.json"]
